@@ -234,7 +234,7 @@ class Mosquitto:
         self._sock.setblocking(0)
         return self._send_connect(self._keepalive, self._clean_session)
 
-    def loop(self, timeout=1.0):
+    def loop(self, timeout=1.0, max_packets=1):
         if timeout < 0.0:
             raise ValueError('Invalid timeout.')
 
@@ -247,7 +247,7 @@ class Mosquitto:
         socklist = select.select(rlist, wlist, [], timeout)
 
         if self._sock in socklist[0]:
-            rc = self.loop_read()
+            rc = self.loop_read(max_packets)
             if rc != MOSQ_ERR_SUCCESS:
                 self._sock.close()
                 self._sock = None
@@ -265,7 +265,7 @@ class Mosquitto:
                 return rc
 
         if self._sock in socklist[1]:
-            rc = self.loop_write()
+            rc = self.loop_write(max_packets)
             if rc != MOSQ_ERR_SUCCESS:
                 self._sock.close()
                 self._sock = None
@@ -356,118 +356,30 @@ class Mosquitto:
 
         return self._send_unsubscribe(False, topic)
 
-    def loop_read(self):
-        # This gets called if pselect() indicates that there is network data
-         # available - ie. at least one byte.  What we do depends on what data we
-         # already have.
-         # If we've not got a command, attempt to read one and save it. This should
-         # always work because it's only a single byte.
-         # Then try to read the remaining length. This may fail because it is may
-         # be more than one byte - will need to save data pending next read if it
-         # does fail.
-         # Then try to read the remaining payload, where 'payload' here means the
-         # combined variable header and actual payload. This is the most likely to
-         # fail due to longer length, so save current data and current position.
-         # After all data is read, send to _mosquitto_handle_packet() to deal with.
-         # Finally, free the memory and reset everything to starting conditions.
-        if self._in_packet.command == 0:
-            try:
-                command = self._sock.recv(1)
-            except socket.error as err:
-                (msg) = err
-                if msg.errno == 11:
-                    return 0
-                print(msg)
-                return 1
-            else:
-                if len(command) == 0:
-                    return 1
-                command = struct.unpack("!B", command)
-                self._in_packet.command = command[0]
-
-        if self._in_packet.have_remaining == 0:
-            # Read remaining
-            # Algorithm for decoding taken from pseudo code at
-            # http://publib.boulder.ibm.com/infocenter/wmbhelp/v6r0m0/topic/com.ibm.etools.mft.doc/ac10870_.htm
-            while True:
-                try:
-                    byte = self._sock.recv(1)
-                except socket.error as err:
-                    (msg) = err
-                    if msg.errno == 11:
-                        return 0
-                    print(msg)
-                    return 1
-                else:
-                    byte = struct.unpack("!B", byte)
-                    byte = byte[0]
-                    self._in_packet.remaining_count.append(byte)
-                    # Max 4 bytes length for remaining length as defined by protocol.
-                     # Anything more likely means a broken/malicious client.
-                    if len(self._in_packet.remaining_count) > 4:
-                        return MOSQ_ERR_PROTOCOL
-
-                    self._in_packet.remaining_length = self._in_packet.remaining_length + (byte & 127)*self._in_packet.remaining_mult
-                    self._in_packet.remaining_mult = self._in_packet.remaining_mult * 128
-
-                if (byte & 128) == 0:
-                    break
-
-            self._in_packet.have_remaining = 1
-            self._in_packet.to_process = self._in_packet.remaining_length
-
-        while self._in_packet.to_process > 0:
-            try:
-                data = self._sock.recv(self._in_packet.to_process)
-            except socket.error as err:
-                (msg) = err
-                if msg.errno == 11:
-                    return 0
-                print(msg)
-                return 1
-            else:
-                self._in_packet.to_process = self._in_packet.to_process - len(data)
-                self._in_packet.packet = self._in_packet.packet + data
-
-        # All data for this packet is read.
-        self._in_packet.pos = 0
-        rc = self._packet_handle()
-
-        # Free data and reset values 
-        self._in_packet.cleanup()
-
-        self._msgtime_mutex.acquire()
-        self._last_msg_in = time.time()
-        self._msgtime_mutex.release()
-        return rc
-
-
-    def loop_write(self):
+    def loop_read(self, max_packets=1):
         if self._sock == None:
             return MOSQ_ERR_NO_CONN
 
-        while len(self._out_packet) > 0:
-            packet = self._out_packet[0]
+        if max_packets < 1:
+            raise ValueError('Invalid max_packets.')
 
-            write_length = self._sock.send(packet.packet[packet.pos:])
-            if write_length > 0:
-                packet.to_process = packet.to_process - write_length
-                packet.pos = packet.pos + write_length
+        for i in range(0, max_packets):
+            rc = self._packet_read()
+            if rc:
+                return rc
+        return MOSQ_ERR_SUCCESS
 
-                if packet.to_process == 0:
-                    if (packet.command & 0xF0) == PUBLISH and packet.qos == 0:
-                        self._callback_mutex.acquire()
-                        if self.on_publish:
-                            self._in_callback = True
-                            self.on_publish(self, self._obj, packet.mid)
-                            self._in_callback = False
+    def loop_write(self, max_packets=1):
+        if self._sock == None:
+            return MOSQ_ERR_NO_CONN
 
-                        self._callback_mutex.release()
+        if max_packets < 1:
+            raise ValueError('Invalid max_packets.')
 
-                    self._out_packet.pop(0)
-            else:
-                pass
-        
+        for i in range(0, max_packets):
+            rc = self._packet_write()
+            if rc:
+                return rc
         return MOSQ_ERR_SUCCESS
 
     def want_write(self):
@@ -598,6 +510,116 @@ class Mosquitto:
     # ============================================================
     # Private functions
     # ============================================================
+
+    def _packet_read(self):
+        # This gets called if pselect() indicates that there is network data
+        # available - ie. at least one byte.  What we do depends on what data we
+        # already have.
+        # If we've not got a command, attempt to read one and save it. This should
+        # always work because it's only a single byte.
+        # Then try to read the remaining length. This may fail because it is may
+        # be more than one byte - will need to save data pending next read if it
+        # does fail.
+        # Then try to read the remaining payload, where 'payload' here means the
+        # combined variable header and actual payload. This is the most likely to
+        # fail due to longer length, so save current data and current position.
+        # After all data is read, send to _mosquitto_handle_packet() to deal with.
+        # Finally, free the memory and reset everything to starting conditions.
+        if self._in_packet.command == 0:
+            try:
+                command = self._sock.recv(1)
+            except socket.error as err:
+                (msg) = err
+                if msg.errno == 11:
+                    return 0
+                print(msg)
+                return 1
+            else:
+                if len(command) == 0:
+                    return 1
+                command = struct.unpack("!B", command)
+                self._in_packet.command = command[0]
+
+        if self._in_packet.have_remaining == 0:
+            # Read remaining
+            # Algorithm for decoding taken from pseudo code at
+            # http://publib.boulder.ibm.com/infocenter/wmbhelp/v6r0m0/topic/com.ibm.etools.mft.doc/ac10870_.htm
+            while True:
+                try:
+                    byte = self._sock.recv(1)
+                except socket.error as err:
+                    (msg) = err
+                    if msg.errno == 11:
+                        return 0
+                    print(msg)
+                    return 1
+                else:
+                    byte = struct.unpack("!B", byte)
+                    byte = byte[0]
+                    self._in_packet.remaining_count.append(byte)
+                    # Max 4 bytes length for remaining length as defined by protocol.
+                     # Anything more likely means a broken/malicious client.
+                    if len(self._in_packet.remaining_count) > 4:
+                        return MOSQ_ERR_PROTOCOL
+
+                    self._in_packet.remaining_length = self._in_packet.remaining_length + (byte & 127)*self._in_packet.remaining_mult
+                    self._in_packet.remaining_mult = self._in_packet.remaining_mult * 128
+
+                if (byte & 128) == 0:
+                    break
+
+            self._in_packet.have_remaining = 1
+            self._in_packet.to_process = self._in_packet.remaining_length
+
+        while self._in_packet.to_process > 0:
+            try:
+                data = self._sock.recv(self._in_packet.to_process)
+            except socket.error as err:
+                (msg) = err
+                if msg.errno == 11:
+                    return 0
+                print(msg)
+                return 1
+            else:
+                self._in_packet.to_process = self._in_packet.to_process - len(data)
+                self._in_packet.packet = self._in_packet.packet + data
+
+        # All data for this packet is read.
+        self._in_packet.pos = 0
+        rc = self._packet_handle()
+
+        # Free data and reset values 
+        self._in_packet.cleanup()
+
+        self._msgtime_mutex.acquire()
+        self._last_msg_in = time.time()
+        self._msgtime_mutex.release()
+        return rc
+
+    def _packet_write(self):
+        while len(self._out_packet) > 0:
+            packet = self._out_packet[0]
+
+            write_length = self._sock.send(packet.packet[packet.pos:])
+            if write_length > 0:
+                packet.to_process = packet.to_process - write_length
+                packet.pos = packet.pos + write_length
+
+                if packet.to_process == 0:
+                    if (packet.command & 0xF0) == PUBLISH and packet.qos == 0:
+                        self._callback_mutex.acquire()
+                        if self.on_publish:
+                            self._in_callback = True
+                            self.on_publish(self, self._obj, packet.mid)
+                            self._in_callback = False
+
+                        self._callback_mutex.release()
+
+                    self._out_packet.pop(0)
+            else:
+                pass
+        
+        return MOSQ_ERR_SUCCESS
 
     def _easy_log(self, level, buf):
         if self.on_log:
