@@ -39,7 +39,7 @@ int main(int argc, char *argv[])
 	rc = mosquitto_connect(mosq, "localhost", 1888, 60);
 
 	while(run == -1){
-		mosquitto_loop(mosq, -1);
+		mosquitto_loop(mosq, -1, 1);
 	}
 
 	mosquitto_lib_cleanup();
